# argocd-poc

./: .gitignore  README.md  argocd-poc.sh  argocd-poc.tf  main.tf
ansible/: playbook.yaml
app/: package.json
docs/: writeup.md
java-poc-app/: .dockerignore  Dockerfile  build.gradle
nodejs-poc-app/: index.mjs  package-lock.json  package.json
rust-poc-app/: .dockerignore  Cargo.toml  Dockerfile
rust-poc-app/helm/: Chart.yaml  values.yaml
rust-poc-app/helm/templates/: service.yaml
rust-poc-app/src/: main.rs
scripts/: 000-configure-user.sh  001-update-droplet.sh  001-update-packages.sh  002-power-cycle-droplet.sh  003-install-k3s.sh  004-deploy-argocd.sh  004-install-argocd.sh  004-install-dependencies.sh  005-deploy-elk-stack.sh  005-deploy-kubernetes-dashboard.sh  005-install-elk.sh  006-deploy-docker-registry.sh  007-build-custom-oci-image.sh  007-deploy-elk-stack.sh  008-build-custom-oci-image.sh  008-deploy-custom-oci-image.sh  009-deploy-custom-oci-image.sh  build-and-push-app.sh  build-custom-oci-image.sh  config.sh  configure-k3s.sh  create-digitalocean-droplet.sh  create-vultr-instance.sh  deploy-and-sync-argocd-app.sh  deploy-custom-oci-image.sh  deploy-elk-stack.sh  deploy-kubernetes-dashboard.sh  digitalocean-api.sh  get-argocd-password.sh  get-code-server-password.sh  get-kubernetes-dashboard-token.sh  get-postgresql-password.sh  kubectl-apply.sh  migrate-database.sh  provision-droplet.sh  provision-k3s.sh  provision.sh  remote-shell.sh  restart-cluster.sh  run-argocd-sync-and-wait-pipeline.sh  (+3 more)
test/: Chart.yaml  Dockerfile  index.mjs  (+2 more)
(+65 files in other folders)
