[package]
name = "rust-poc-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
hyper = { version = "0.14.26", features = ["http1", "server"] }
routerify = { version = "3.0.0", features = ["hyper-http1"] }
tokio = { version = "1.28.1", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
tracing-opentelemetry = "0.18.0"
opentelemetry = "0.19.0"
opentelemetry-zipkin = "0.17.0"
once_cell = "1.17.1"
opentelemetry_api = "0.19.0"
